--- a/Sito/templates/prova.html
+++ b/Sito/templates/prova.html
@@ -12,50 +12,31 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 
-    <form class="was-validated">
-        <div class="mb-3">
-          <label for="validationTextarea" class="form-label">Textarea</label>
-          <textarea class="form-control is-invalid" id="validationTextarea" placeholder="Required example textarea" required></textarea>
-          <div class="invalid-feedback">
-            Please enter a message in the textarea.
+    <div class="container">
+    <br><br>
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+        {% for i in films%}
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                {{films[i][1]}}
+              </button>
+            </h2>
+
+            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                <b>Regista:</b> {{films[i][3]}}<br>
+                <b>Valutazione:</b> {{films[i][4]}}<img src="static/img/stella.png" style="height: 20px; width:20px;"><br>
+                <b>Data d'uscita:</b> {{films[i][6]}}<br>
+                <form action="">
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+              </div>
+            </div>
           </div>
-        </div>
-      
-        <div class="form-check mb-3">
-          <input type="checkbox" class="form-check-input" id="validationFormCheck1" required>
-          <label class="form-check-label" for="validationFormCheck1">Check this checkbox</label>
-          <div class="invalid-feedback">Example invalid feedback text</div>
-        </div>
-      
-        <div class="form-check">
-          <input type="radio" class="form-check-input" id="validationFormCheck2" name="radio-stacked" required>
-          <label class="form-check-label" for="validationFormCheck2">Toggle this radio</label>
-        </div>
-        <div class="form-check mb-3">
-          <input type="radio" class="form-check-input" id="validationFormCheck3" name="radio-stacked" required>
-          <label class="form-check-label" for="validationFormCheck3">Or toggle this other radio</label>
-          <div class="invalid-feedback">More example invalid feedback text</div>
-        </div>
-      
-        <div class="mb-3">
-          <select class="form-select" required aria-label="select example">
-            <option value="">Open this select menu</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-          </select>
-          <div class="invalid-feedback">Example invalid select feedback</div>
-        </div>
-      
-        <div class="mb-3">
-          <input type="file" class="form-control" aria-label="file example" required>
-          <div class="invalid-feedback">Example invalid form file feedback</div>
-        </div>
-      
-        <div class="mb-3">
-          <button class="btn btn-primary" type="submit" disabled>Submit form</button>
-        </div>
-      </form>
+        {% endfor %}
+      </div>
+    </div>
 
   </body>
 </html>
